# OpenSteer

TRY-JB-CuPPified/: CMakeLists.txt  Doxyfile
TRY-JB-CuPPified/cupp/: CMakeLists.txt  cmake_install.cmake
TRY-JB-CuPPified/cupp/examples/: Makefile  cmake_install.cmake
TRY-JB-CuPPified/cupp/examples/kernel/: Makefile  cmake_install.cmake  kernel_kernel.cpp1.ii  kernel_kernel.cpp2.i  kernel_kernel.cpp3.i  kernel_kernel.cudafe1.c  kernel_kernel.cudafe1.cpp  kernel_kernel.cudafe1.gpu  kernel_kernel.cudafe1.stub.c  kernel_kernel.cudafe1.stub.h  kernel_kernel.cudafe2.c  kernel_kernel.cudafe2.gpu  kernel_kernel.cudafe2.stub.c  kernel_kernel.fatbin.c  kernel_kernel.hash  kernel_kernel.linkinfo  kernel_kernel.ptx  kernel_kernel.sm_10.cubin  kernel_kernel.sm_13.cubin
TRY-JB-CuPPified/cupp/examples/memory1d/: Makefile  cmake_install.cmake  kernel_memory1d.cpp1.ii  kernel_memory1d.cpp2.i  kernel_memory1d.cpp3.i  kernel_memory1d.cudafe1.c  kernel_memory1d.cudafe1.cpp  kernel_memory1d.cudafe1.gpu  kernel_memory1d.cudafe1.stub.c  kernel_memory1d.cudafe1.stub.h  kernel_memory1d.cudafe2.c  kernel_memory1d.cudafe2.gpu  kernel_memory1d.cudafe2.stub.c  kernel_memory1d.cudafe2.stub.h  kernel_memory1d.fatbin.c  kernel_memory1d.hash  kernel_memory1d.linkinfo  kernel_memory1d.ptx  kernel_memory1d.sm_10.cubin  kernel_memory1d.sm_13.cubin
TRY-JB-CuPPified/cupp/examples/vector/: Makefile  cmake_install.cmake  (+17 more)
TRY-JB-CuPPified/cupp/src/: Makefile  cmake_install.cmake
TRY-JB-CuPPified/ds/: dyn_grid.h  dyn_grid_4.h  dyn_grid_4_node.h  dyn_grid_area.h  dyn_grid_clever.h  dyn_grid_clever_node.h  dyn_grid_clever_v2.h  dyn_grid_clever_v2_node.h  gpu_grid.h  grid.h
TRY-JB-CuPPified/ds/deviceT/: dyn_grid.h  dyn_grid_clever.h  dyn_grid_clever_v2.h  gpu_grid.h  grid.h
TRY-JB-CuPPified/ds/new/: dyn_grid_clever.h
TRY-JB-CuPPified/include/OpenSteer/: AbstractVehicle.h  Boid.h  Color.h  CuPPConfig.h  Matrix.h  MatrixUtilities.h  Obstacle.h  OpenSteerDemo.h  PlugIn.h  PlugInUtilities.h  PosIndexPair.h  ProximityMap.h  SteerLibrary.h  Vec3.h  filter_insert_iterator.h  kernels.h
TRY-JB-CuPPified/kapaga/: assert.h  kapaga_development_group.txt  math_utilities.h  omp_stop_watch.cpp  omp_stop_watch.h  omp_stubs.h  omp_timer.h  random_number_source.h  sequence_writer.h  thread_storage.cpp  thread_storage.h  unused_parameter.h
TRY-JB-CuPPified/kapaga/garbage_that_might_become_handy/: stop_watch.h  time_unit.h  wall_clock_time.h
TRY-JB-CuPPified/kapaga/posix/: omp_stubs.c  os_process_utilities.h  random_number_source.cpp  random_number_source.h
TRY-JB-CuPPified/plugins/: BoidsCupp.cpp  BoidsCupp10.cpp  BoidsCupp11_tf.cpp  BoidsCupp2.cpp  BoidsCupp3.cpp.old  BoidsCupp3_db.cpp  BoidsCupp3_tf_db.cpp  BoidsCupp5.cpp  BoidsCupp5_tf.cpp  BoidsCupp6.cpp  BoidsCupp6_tf.cpp  BoidsCupp7.cpp  BoidsCupp7_tf.cpp  BoidsCupp7_tf.cpp.old  BoidsCupp8.cpp  BoidsCupp9.cpp  BoidsCupp9_tf.cpp
TRY-JB-CuPPified/plugins/cuda/: BoidsCupp_find_neighbours_kernel.cu  BoidsCupp_find_neighbours_simulate_dyn_grid_clever_grid_tf_kernel.cu  BoidsCupp_find_neighbours_simulate_dyn_grid_clever_kernel.cu  BoidsCupp_find_neighbours_simulate_dyn_grid_clever_tf_kernel.cu  BoidsCupp_find_neighbours_simulate_dyn_grid_clever_v2_kernel.cu  BoidsCupp_find_neighbours_simulate_dyn_grid_kernel.cu  BoidsCupp_find_neighbours_simulate_frequency_gpu_grid_kernel.cu  BoidsCupp_find_neighbours_simulate_frequency_grid_kernel.cu  BoidsCupp_find_neighbours_simulate_frequency_kernel.cu  BoidsCupp_find_neighbours_simulate_kernel.cu  BoidsCupp_update_kernel.cu  grid_preprocess.cu
TRY-JB-CuPPified/plugins/old/: Boids.cpp  BoidsCleanUp.cpp  BoidsRewrite.cpp  BoidsWithThinkFrequency.cpp
TRY-JB-CuPPified/plugins/tmp/: BoidsCupp3.cpp  BoidsCupp3_tf.cpp
TRY-JB-CuPPified/src/: CuPPConfig.cpp  MatrixUtilities.cpp  Obstacle.cpp  OpenSteerDemo.cpp  PlugIn.cpp  SimpleVehicle.cpp
TRY-JB-CuPPified/src/Graphics/: GraphicsAnnotationLogger.cpp  GraphicsPrimitives.cpp  LockingRenderFeeder.cpp  OpenGlGraphicsPrimitivesTranslators.cpp  OpenGlRenderMesh.cpp  OpenGlRenderer.cpp  OpenGlUtilities.cpp  ThreadStorageRenderFeeder.cpp
TRY-JB-CuPPified/test/: OpenGlImageTest.cpp  OpenGlTextTest.cpp  TrailTest.cpp  TrailTest.h
TRY-JB-CuPPified/unittests/: Makefile
TRY-JB-CuPPified/unittests/tests/: math_utilities_test.cpp  omp_stop_watch_test.cpp  omp_stubs_test.cpp  omp_timer_test.cpp  randomizer_test.cpp
TRY-JB-CuPPified/unittests/unittest++/: TestResults.cpp
(+172 files in other folders)
